--- a/README
+++ b/README
@@ -15,12 +15,20 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
 Simple Lisp interpreter for C# 3.5
 ==================================
-This is a pet Lisp interpreter for .NET 3.5 written in C#. Currently supports
-only the minimum operations to get a program running:
+This is a pet Lisp interpreter for .NET 3.5 written in C#.
+The main issue here is to have fun, NOT to make it as fast as possible!
+However, I strive to make the interpreter small and simple and keep most of
+the standard functions and macros in a separate "init" script, so another
+implementation of the base system with speed in mind should yield results
+pretty quickly.
+
+A quick overview:
 
 - Special Forms: define, defun, setq, if, quote, lambda, progn
-- cons, car, cdr, list, reverse, map, filter, reduce, all, any, not
-- nullp, consp, symbolp, length, reverse, eq
+- cons, car, cdr, list, reverse, map, filter, reduce, every, some, not
+- nullp, consp, symbolp, stringp, numberp, length, reverse, eq
+- push, pop
+- caar, cadr, cdar, cddr
 - lexical scoping
 - minimal arithmetic (all numbers are double FOR NOW):
   +, -, *, /, mod, =, >, <, <=, >=
@@ -36,14 +44,12 @@ only the minimum operations to get a program running:
 
 
 Plans:
-- defun (with &rest parameters)
-- defmacro
+- augment defun and defmacro with &rest parameters
 - Quasiquoting
 - string operations
-- "Prelude" script with some more standard functions like equalp, append, push...
 - eval
 - port operations (files, strings as streams, sockets...)
-- read (from string, port etc.)
+- read (from port)
 
 
 CLR FFI:
