--- a/README
+++ b/README
@@ -44,7 +44,7 @@ The base interpreter provides the following:
 - Constants: nil, t
 
 - Basic functions: cons, car, cdr, eq, nullp, consp, symbolp, numberp,
-  apply, string, stringp, substring, length (for strings and lists),
+  apply, string, stringp, substring, length (for strings, lists, arrays),
   random, print (raises a c# event on the interpreter),
   eval (always uses the global environment), make-array, arrayp, aref
 
@@ -94,7 +94,7 @@ The init script provides the following on top of the base language:
   nreverse (=reverse ATM), map, filter, reduce, append, every, some, eql,
   equal, remove-if-not (=filter), remove-if, count-if, count-if-not,
   all (=every), any (=some), sort, identity, acons, assoc, pairlis,
-  member, member-if, member-if-not, styring>=, string<=
+  member, member-if, member-if-not, styring>=, string<=, vector
 
 - The map function corresponds to mapcar as found in Common Lisp
 
